traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:3: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  if (!(estFaceMur())) {return(false)}
                               ^Snake:3: warning: enclosing method estSurPositionFinale has result type Unit: return value discarded
  if (!(estFaceMur())) {return(false)}
                        ^Snake:5: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  if (!(estFaceMur())){return(false)}
                              ^Snake:5: warning: enclosing method estSurPositionFinale has result type Unit: return value discarded
  if (!(estFaceMur())){return(false)}
                       ^Snake:7: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return(true)  }
               ^Snake:7: warning: enclosing method estSurPositionFinale has result type Unit: return value discarded
        return(true)  }
        ^Snake:12: error: value unary_! is not a member of Unit
  while (!(estSurPositionFinale())){
         ^